# pipeline_template

./: .gitignore  .gitlab-ci.yml  .releaserc.json  .releaserc.yml  CMakeLists.txt  README.md  conanfile.py  test.txt
.github/workflow/: build.yml  deploy.yml
.github/workflows/: build.yml  deploy.yml  pipe.yml  pipeline.yml  test.yml
App/: CMakeLists.txt
App/include/: HelloHttpServer.h
App/src/: HelloHttpServer.cpp
Main/: CMakeLists.txt
Main/src/: main.cpp
Test/: CMakeLists.txt
Test/include/: test_request.h
Test/src/: tests.cpp
ci-src/conan-profile/: profile-release-gcc-13-x86_64
ci-src/docker/: Dockerfile
ci-templates/: .gitlab-ci-build-image.yml
ci/scripts/: build.py
ci/src/conan-profile/: profile-release-gcc-13-x86_64
ci/src/docker/: Dockerfile
ci/templates/: .gitlab-ci-build-image.yml
